# ApartmentFriend

./: .gitignore  README.md  env_settings.py  manage.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
aptfriend/: asgi.py  celery.py  celery_config.py  choices.py  settings.py  urls.py  wsgi.py
celery_app/: __init__.py  utils.py
celery_app/crawlers/: base.py  ptt.py  rent_591.py
celery_app/handler/: requests.py
celery_app/models/: enums.py  responses.py
celery_app/tasks/: system_tasks.py
celery_app/tests/: test_tasks.py
static/: main.js  style.css
templates/: base.html  dashboard.html  info.html  posts.html  tasks.html
