[tool.poetry]
name = "aptfriend"
version = "0.1.0"
description = ""
authors = ["nick <nickchen1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "5.0.1"
celery = "^5.3.6"
pydantic-settings = "^2.1.0"
requests = "^2.31.0"
selenium = "^4.16.0"
fake-useragent = "^1.4.0"
redis = "^5.0.1"
mysqlclient = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
